--- a/src/main/resources/templates/discussions/update-comment.html
+++ b/src/main/resources/templates/discussions/update-comment.html
@@ -50,6 +50,7 @@
                                           th:field="*{commentContent}"></textarea>
                             </div>
                             <input th:field="*{id}" type="hidden"/>
+                            <input th:field="*{commentDateTime}" type="hidden"/>
                             <button class="btn btn-primary" type="submit">Update</button>
                             <a class="btn btn-warning" role="button"
                                th:href="@{/show-discussion-details(id=${discussion.id})}">
