--- a/src/main/resources/templates/events/add-event.html
+++ b/src/main/resources/templates/events/add-event.html
@@ -67,6 +67,13 @@
                     <input class="form-control" id="chiefGuestDesignation" placeholder="Enter Chief Guest's Designation"
                            th:field="*{chiefGuestDesignation}" type="text">
                 </div>
+                <div class="form-group">
+                    <label for="eventStatus">Select Event Status</label>
+                    <select class="form-control" id="eventStatus" required th:field="*{eventStatus}">
+                        <option th:value="Active">Active</option>
+                        <option th:value="Inactive">Inactive</option>
+                    </select>
+                </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
         </div>
