--- a/src/main/resources/templates/events/update-event.html
+++ b/src/main/resources/templates/events/update-event.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Add New Event-MHSN</title>
+    <title>Update Event-MHSN</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -20,8 +20,8 @@
 <main class="main-content" role="main">
     <div class="container">
         <div class="pt-3">
-            <h1>Add New Event</h1>
-            <form method="POST" th:action="@{/event-save}" th:object="${event}">
+            <h1>Update Event</h1>
+            <form method="POST" th:action="@{/event-update}" th:object="${eventToUpdate}">
                 <div class="form-group">
                     <label for="title">Event Title:</label>
                     <input class="form-control" id="title" placeholder="Enter Event Title" required
@@ -74,7 +74,8 @@
                         <option th:value="Inactive">Inactive</option>
                     </select>
                 </div>
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <input th:field="*{id}" type="hidden">
+                <button class="btn btn-primary" type="submit">Update</button>
             </form>
         </div>
     </div>
