--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,6 +48,19 @@
                 podcasts, and videos.</p>
         </div>
     </div>
+    <!-- Bootstrap Toast for displaying error message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+    </div>
+
     <!-- Bootstrap Toast for displaying success message -->
     <div aria-atomic="true" aria-live="assertive" class="toast"
          role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
