--- a/src/main/resources/templates/messages/message-list.html
+++ b/src/main/resources/templates/messages/message-list.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="fragments/common-header :: common-header"></div>
 
 <head>
     <title>Messages-MHSN</title>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/ckeditor.js"></script>
     <link href="css/message.css" rel="stylesheet">
-
-
 </head>
 <body>
 
 <!-- Navbar -->
-
 <div th:replace="fragments/navbar :: navbar"></div>
 
 <!-- Sidebar -->
@@ -26,34 +21,41 @@
     <div class="container">
         <div class="pt-3">
             <div class="chat-container">
+                <div class="text-center" th:if="${isUser != null and !#strings.isEmpty(isUser) and isUser}">
+                    <div>
+                        <strong>**Your Current Balance: BDT-1000tk</strong> <br>
+                        <strong class="bg-danger">**Each message will cost you BDT-100tk.</strong> <br>
+                        <strong>**So, describe your mental health problems to therapist in
+                            details</strong> <br>
+                    </div>
+                </div>
                 <div class="chat-box" id="chatbox">
                     <div th:each="message: ${userTherapistMessageList}">
-                        <!--                        TODO:solve message sequence problem-->
                         <!-- Check if the message sender is the current user -->
                         <div class="message-container" th:if="${message.sender.id == userId}">
                             <div class="sender-message">
-                                <span th:text="${message.content}"></span>
+                                <span th:utext="${message.content}"></span>
                                 <div class="time-stamp">
-                                    <span th:text="${message.sentAt}"></span>
+                                    <span th:text="${message.sentDate} + ' on ' + ${message.sentTime}"></span>
                                 </div>
                             </div>
                         </div>
                         <!-- Check if the message sender is the therapist -->
                         <div class="message-container" th:if="${message.sender.id != userId}">
                             <div class="receiver-message">
-                                <span th:text="${message.content}"></span>
+                                <span th:utext="${message.content}"></span>
                                 <div class="time-stamp">
-                                    <span th:text="${message.sentAt}"></span>
+                                    <span th:text="${message.sentDate} + ' on ' + ${message.sentTime}"></span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Send New Message -->
-                <div th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser)
+                <div class="chat-input-form" th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser)
                      or (isTherapist != null and !#strings.isEmpty(isTherapist) and isTherapist)}">
                     <form id="sendMessageForm" method="POST"
-                          th:action="@{/new-message-save(receiverId = ${param.receiverId})}"
+                          th:action="@{/new-message-save(receiverId=${param.receiverId})}"
                           th:object="${userTherapistMessage}">
                         <div class="form-group chat-input-group">
                             <textarea class="user-input" id="userInput" placeholder="Type your message..."
@@ -73,6 +75,31 @@
             </div>
         </div>
     </div>
+    <!-- Bootstrap Toast for displaying error message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+    </div>
+
+    <!-- Bootstrap Toast for displaying success message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
+         th:if="${success}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Success</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-success text-white" th:text="${success}"></div>
+    </div>
 </main>
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
@@ -81,25 +108,12 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
-<script>
-    $(function () {
-    $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
 <script>
     $(document).ready(function () {
-        $('#clearChatBtn').on('click', function () {
-            if (confirm('Are you sure?')) {
-                // Get the receiverId from the current URL
-                const urlParams = new URLSearchParams(window.location.search);
-                const receiverId = urlParams.get('receiverId');
-
-                // Redirect to the clear-messages route with receiverId
-                window.location.href = '/clear-messages?receiverId=' + receiverId;
-            }
-        });
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000 // 5 seconds
+        }).toast('show');
     });
 </script>
 </body>
