--- a/src/main/resources/templates/payments/send-balance-adding-request.html
+++ b/src/main/resources/templates/payments/send-balance-adding-request.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="form-group">
                     <label for="senderAccount">Sender Account</label>
-                    <input class="form-control" id="senderAccount" placeholder="Enter sender account/moblie no" required
+                    <input class="form-control" id="senderAccount" placeholder="Enter sender account/mobile no" required
                            th:field="*{senderAccount}" type="text">
                 </div>
                 <div class="form-group">
