--- a/src/main/resources/templates/payments/update-balance-adding-request.html
+++ b/src/main/resources/templates/payments/update-balance-adding-request.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="form-group">
                     <label for="paymentDateAndTime">Payment Date and Time:</label>
-                    <input class="form-control" id="paymentDateAndTime" placeholder="Enter Payment Date and Time"
+                    <input class="form-control" id="paymentDateAndTime"
                            required
                            th:field="*{paymentDateAndTime}" type="datetime-local">
                 </div>
