--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -10,7 +10,9 @@
         <a class="btn" th:href="@{/show-podcast-list}">Podcasts</a>
         <a class="btn" th:href="@{/show-video-list}">Videos</a>
         <a class="btn" th:href="@{/show-event-list}">Events</a>
-        <a class="btn" th:href="@{/show-therapist-list}">Therapists</a>
+        <a class="btn"
+           th:if="${(isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin) or (isUser != null and !#strings.isEmpty(isUser) and isUser)}"
+           th:href="@{/show-therapist-list}">Therapists</a>
         <a class="btn" th:href="@{/show-discussion-list}">Group Discussions</a>
         <a class="btn" th:href="@{/show-chat-list}">ChatBot Support</a>
         <a class="btn" th:href="@{/show-not-answered-question-list}"
@@ -19,7 +21,6 @@
            th:if="${(isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin)}">Approve Payments</a>
         <a class="btn" th:href="@{/show-payment-histories}"
            th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser)}">View Payment Histories</a>
-
         <!-- Add more buttons as needed -->
     </div>
 </div>
