--- a/src/main/resources/templates/profiles/update-profile.html
+++ b/src/main/resources/templates/profiles/update-profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
+
 <head>
     <title>Update User Profile-MHSN</title>
     <meta charset="UTF-8">
@@ -8,6 +9,8 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="css/profile.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+
 </head>
 <body>
 
