Index and application properties edited.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
         <div class="pt-3">
             <h1>Welcome to Mental Health Support Network</h1>
             <p class="text-justify">This is a website to help individuals facing mental health challenges. The aim is to
-                make it easy for people to find support and resources.
+                make it easy for people to find support, resources, connect with therapists as well as chatbot support.
                 We know that mental health is important, and sometimes it is hard to get the help we need.
                 This website aims to change that. This initiative focuses on create a safe space for individuals seeking
                 emotional well-being,
@@ -40,9 +40,10 @@
                 The platform draws on a wealth of knowledge to empower users to find resources that align with their
                 needs and personal growth objectives.
                 This website is like a friend that understands and helps you navigate through tough times.
-                It will have features like virtual support groups, and self-help tools. Virtual support groups and
-                therapists to connect
-                with others going through similar experiences.
+                It will have features like virtual support groups, self-help tools, event on mental health
+                as well as chatbot. Virtual support groups and therapists to connect
+                with others going through similar experiences and a chatbot to answer the questions from its user.
+                Users can chat with a therapists through this website by paying a amount of money.
                 Therapist directories help users find professionals who can provide treatment and support.
                 Self-help tools empower users to take control of their mental health with things like articles, blogs,
                 podcasts, and videos.</p>
